[gd_scene load_steps=10 format=3 uid="uid://qeitfgj53ewa"]

[ext_resource type="Script" path="res://hud.gd" id="1_rp0qk"]
[ext_resource type="Texture2D" uid="uid://dfu00fm1bj00g" path="res://sprite animations/weapons/tag.png" id="2_0ymmv"]
[ext_resource type="Texture2D" uid="uid://c5n8wkmce0et6" path="res://tick.png" id="2_fblox"]
[ext_resource type="FontFile" uid="uid://87gla4t0j7vs" path="res://addons/denmark-regular-webfont.ttf" id="3_3c3vy"]
[ext_resource type="Texture2D" uid="uid://b8ojxtehmt7nm" path="res://cross.png" id="3_m66l0"]
[ext_resource type="Texture2D" uid="uid://c5m4bm2jcldf1" path="res://coins.png" id="4_w4br0"]
[ext_resource type="Texture2D" uid="uid://dn28nocehy4q8" path="res://sprite animations/npc 1/npc ally.png" id="5_cbc5w"]
[ext_resource type="Texture2D" uid="uid://bnibhf4p2ovin" path="res://play.png" id="6_oudgg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hl24h"]
bg_color = Color(1, 0, 0, 0.443137)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.364706, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0, 0, 0.858824)

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_rp0qk")
metadata/_edit_vertical_guides_ = [3900.0]
metadata/_edit_horizontal_guides_ = [3006.0, 471.0]

[node name="blackRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.52549)
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="TagButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -536.0
offset_top = -487.0
offset_right = -48.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.415686, 0, 1)
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 250
icon = ExtResource("2_0ymmv")
flat = true
icon_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tick" type="Sprite2D" parent="."]
position = Vector2(3887, 1321)
texture = ExtResource("2_fblox")

[node name="Cross" type="Sprite2D" parent="."]
position = Vector2(3903, 1330)
texture = ExtResource("3_m66l0")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -3334.0
offset_top = 112.0
offset_right = -2655.0
offset_bottom = 466.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.976471, 0.847059, 0.286275, 1)
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 350
text = "60"

[node name="Label" type="Label" parent="."]
offset_left = 2648.0
offset_top = 72.0
offset_right = 3565.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 100
text = "Distance to Lion: "
horizontal_alignment = 1

[node name="distanceToLion" type="Label" parent="."]
offset_left = 2760.0
offset_top = 185.0
offset_right = 3439.0
offset_bottom = 539.0
theme_override_colors/font_color = Color(0, 0.509804, 0.929412, 1)
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 350

[node name="ScoreTimer" type="Timer" parent="."]

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(282, 275)
scale = Vector2(2.35, 2.45625)
texture = ExtResource("4_w4br0")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1548.0
offset_top = 431.0
offset_right = 6220.0
offset_bottom = 2512.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/CenterContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 103
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 100
text = "RESUME"

[node name="ExitButton" type="Button" parent="PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 100
text = "EXIT"

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
color = Color(1, 1, 1, 0.356863)

[node name="Portfolio" type="Sprite2D" parent="."]
position = Vector2(5677, 246)
scale = Vector2(0.466319, 0.485344)
texture = ExtResource("5_cbc5w")

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -457.0
offset_top = 20.0
offset_right = -120.0
offset_bottom = 368.0
grow_horizontal = 0
icon = ExtResource("6_oudgg")
flat = true
expand_icon = true

[node name="gameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1401.0
offset_top = -471.0
offset_right = 1401.0
offset_bottom = 471.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hl24h")

[node name="game over label" type="Label" parent="gameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -674.0
offset_top = 231.0
offset_right = 674.0
offset_bottom = 435.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 200
text = "GAME OVER"

[node name="try again button" type="Button" parent="gameOverPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 547.0
offset_top = -400.0
offset_right = 1221.0
offset_bottom = -113.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 100
text = "TRY AGAIN"

[node name="quit button" type="Button" parent="gameOverPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1581.0
offset_top = -399.0
offset_right = 2255.0
offset_bottom = -112.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_3c3vy")
theme_override_font_sizes/font_size = 100
text = "QUIT"

[connection signal="pressed" from="TagButton" to="." method="_on_tag_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="pressed" from="PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="gameOverPanel/try again button" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="gameOverPanel/quit button" to="." method="_on_quit_button_pressed"]
